[project]
name = "agentsville-agentic-travel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "json-repair==0.47.1",
    "numexpr==2.11.0",
    "openai==1.74.0",
    "pandas==2.3.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
]
